shtl-ink/0501_shtl-ink_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: shtl-ink
  name: shtl-ink-service
  labels:
    app: shtl-ink
spec:
  type: NodePort
  selector:
    app: shtl-ink
  ports:
  - name: api-port
    protocol:  TCP
    port: 8000
    targetPort: pod-api-port
  - name: front-port
    protocol: TCP
    port: 3000
    targetPort: pod-front-port
