shtl-ink/0502_shtl-ink_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shtl-ink-ingress
  namespace: shtl-ink
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:585441654511:certificate/df11c2fd-2ffc-45c1-8e3e-b4189ef2d5e1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: sky-dev-ingress
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - shtl.ink
        - api.shtl.ink
  rules:
    - host: "shtl.ink"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              port: 
                name: use-annotation
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shtl-ink-service
              port:
                name: front-port
    - host: "api.shtl.ink"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shtl-ink-service
                port:
                  name: api-port
